<resources>
    <string name="app_name">Mobile demo</string>

    <string name="title_home">Home</string>
    <string name="title_monitor">Monitor</string>
    <string name="title_todo">To-do</string>
    <string name="title_medal">Medal</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="title_activity_birthday">BirthdayActivity</string>
    <string name="title_activity_report">ReportActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_profile_photo">Profile_photo</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_birthday">Birthday</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_account">Account</string>
    <string name="action_setting">Setting</string>
    <string name="action_logout">Logout</string>
    <string name="action_password_change">Change Password</string>
    <string name="action_birthday_change">Choose</string>
    <string name="action_photo_change">Upload</string>
    <string name="action_save">Save</string>
    <string name="action_medal_daily">Daily</string>
    <string name="action_medal_weekly">Weekly</string>
    <string name="action_medal_monthly">Monthly</string>
    <string name="action_medal_type1">10 mins</string>
    <string name="action_medal_type1_1">1 hour</string>
    <string name="action_medal_type2">10 times</string>
    <string name="action_medal_type2_1">100 times</string>

    <string name="welcome">"Welcome ! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="genders_array">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="location">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
        <item>Prefer not to say</item>
    </string-array>
    <string name="home_hi">"Hi, XXX"</string>
    <string name="home_today">"Today:"</string>
    <string name="home_hour">"You have efficiently studied for X hours !"</string>
    <string name="home_todo">"Your todo list today:"</string>
</resources>