<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountActivity">

    <Button
        android:id="@+id/account_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="300dp"
        android:enabled="true"
        android:text="@string/action_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/account_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="528dp"
        android:enabled="true"
        android:text="@string/action_password_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/account_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="596dp"
        android:enabled="true"
        android:text="@string/action_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextPhone"
        android:layout_width="111dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:text="Nickname: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone3"
        android:textSize="55px"/>

    <TextView
        android:id="@+id/editTextPhone4"
        android:layout_width="71dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:singleLine="false"
        android:text="Phone: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        android:textSize="55px"/>

    <TextView
        android:id="@+id/editTextPhone6"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="phone"
        android:text="Gender:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone5"
        android:textSize="55px"/>

    <TextView
        android:id="@+id/editTextPhone5"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="phone"
        android:text="Birthday:"
        android:textSize="55px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone4" />

    <TextView
        android:id="@+id/editTextPhone3"
        android:layout_width="149dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:inputType="phone"
        android:text="Profile photo "
        android:textSize="55px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_back" />

    <EditText
        android:id="@+id/username"
        android:layout_width="253dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:hint="0400000000"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username2" />

    <EditText
        android:id="@+id/username2"
        android:layout_width="253dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_nickname"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/username2"
        app:layout_constraintStart_toEndOf="@+id/editTextPhone3"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="25dp"
        android:onClick="setDate"
        android:text="@string/date_button_set"
        app:layout_constraintStart_toEndOf="@+id/editTextPhone5"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/username"
        android:layout_marginTop="72dp"
        android:text="@string/date_selected"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="63dp"
        android:text="日期选择"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_date_picker"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:layout_editor_absoluteX="142dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

